Clean up deprecated usages